--- a/notebooks/jaccard_vs_aic.ipynb
+++ b/notebooks/jaccard_vs_aic.ipynb
@@ -752,7 +752,12 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "5072b5ad-b7ae-4a31-aa2d-f7c22cd0b7d6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
