--- a/notebooks/jaccard_vs_aic.ipynb
+++ b/notebooks/jaccard_vs_aic.ipynb
@@ -763,10 +763,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "104d7245-044e-4696-8f7b-51c65b1806fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 3s, sys: 4.93 s, total: 4min 8s\n",
+      "Wall time: 4min 10s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>object</th>\n",
+       "      <th>jaccard</th>\n",
+       "      <th>aic</th>\n",
+       "      <th>phenodigm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>81097</td>\n",
+       "      <td>HP:0011193</td>\n",
+       "      <td>MONDO:0060670</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.271054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>81254</td>\n",
+       "      <td>HP:0011193</td>\n",
+       "      <td>MONDO:0009789</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.271054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>81332</td>\n",
+       "      <td>HP:0011193</td>\n",
+       "      <td>MONDO:0011846</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.271054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>81435</td>\n",
+       "      <td>HP:0011193</td>\n",
+       "      <td>MONDO:0008313</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.271054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>81567</td>\n",
+       "      <td>HP:0011193</td>\n",
+       "      <td>MONDO:0020722</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.271054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101355</th>\n",
+       "      <td>100496</td>\n",
+       "      <td>HP:0010037</td>\n",
+       "      <td>MONDO:0010621</td>\n",
+       "      <td>0.013575</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.115316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101356</th>\n",
+       "      <td>101109</td>\n",
+       "      <td>HP:0010037</td>\n",
+       "      <td>MONDO:0008963</td>\n",
+       "      <td>0.013514</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.115056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101357</th>\n",
+       "      <td>91870</td>\n",
+       "      <td>HP:0010037</td>\n",
+       "      <td>MONDO:0011038</td>\n",
+       "      <td>0.013453</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.114798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101358</th>\n",
+       "      <td>98607</td>\n",
+       "      <td>HP:0010037</td>\n",
+       "      <td>MONDO:0008999</td>\n",
+       "      <td>0.013453</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.114798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101359</th>\n",
+       "      <td>98171</td>\n",
+       "      <td>HP:0010037</td>\n",
+       "      <td>MONDO:0006372</td>\n",
+       "      <td>0.013274</td>\n",
+       "      <td>0.979601</td>\n",
+       "      <td>0.114033</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101360 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         index     subject         object   jaccard       aic  phenodigm\n",
+       "0        81097  HP:0011193  MONDO:0060670  0.075000  0.979601   0.271054\n",
+       "1        81254  HP:0011193  MONDO:0009789  0.075000  0.979601   0.271054\n",
+       "2        81332  HP:0011193  MONDO:0011846  0.075000  0.979601   0.271054\n",
+       "3        81435  HP:0011193  MONDO:0008313  0.075000  0.979601   0.271054\n",
+       "4        81567  HP:0011193  MONDO:0020722  0.075000  0.979601   0.271054\n",
+       "...        ...         ...            ...       ...       ...        ...\n",
+       "101355  100496  HP:0010037  MONDO:0010621  0.013575  0.979601   0.115316\n",
+       "101356  101109  HP:0010037  MONDO:0008963  0.013514  0.979601   0.115056\n",
+       "101357   91870  HP:0010037  MONDO:0011038  0.013453  0.979601   0.114798\n",
+       "101358   98607  HP:0010037  MONDO:0008999  0.013453  0.979601   0.114798\n",
+       "101359   98171  HP:0010037  MONDO:0006372  0.013274  0.979601   0.114033\n",
+       "\n",
+       "[101360 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "new_df = pd.DataFrame(columns = [\"subject\", \"object\", \"jaccard\", \"aic\", \"phenodigm\"])\n",
@@ -783,10 +947,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "195afbdc-6c10-4313-9514-573afe5feabc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.979601\n",
+       "Name: aic, dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_df['aic'].drop_duplicates()"
    ]
