--- a/notebooks/SearchComparisons.ipynb
+++ b/notebooks/SearchComparisons.ipynb
@@ -478,7 +478,7 @@
     }
    ],
    "source": [
-    "# MGI:1261425 => drosha, ribonuclease type III\n",
+    "# MONDO:0007523 => Ehlers-Danlos syndrome\n",
     "condition_1 = df_term_association['subject'] == \"MONDO:0007523\"\n",
     "condition_2 = df_term_association['object'].str.startswith(\"HP:\")\n",
     "df_100 = df_term_association[condition_1 & condition_2]\n",
